.labs/Local-Kubernetes/mlops/manifests/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
spec:
  ingressClassName: traefik
  rules:
    - host: kafka-ui.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
